# WAVECARE_DATA_GEN

./: .gitignore  README.md  pyproject.toml
docs/: PHYSICS_MODEL_AND_ASSUMPTIONS.md  PHYSICS_REVIEW_GUIDE.md  PHYSICS_VALIDATION_CHECKLIST.md  RELECTURE_PHYSIQUE_FR.md
paper/ICPR_2026_LaTeX/: ICPRArticle.tex
scripts/: audit_array_geometry.py  benchmark_3d.sh  compare_with_umbmid.py  download_phantoms.py  generate_dataset.py  generate_scan.py  install_gprmax.sh  physics_sensitivity.py  run_multiscan.py  setup_dgx.sh  slurm_dataset.py  slurm_scan.py  slurm_sim.sh  verify_dataset.py  visualize_phantom.py
tests/: test_dielectrics.py  test_phantoms.py  test_pipeline.py  test_solver_geometry.py
wavecare/: __init__.py
wavecare/acqui/: __init__.py  geometry.py  presets.py
wavecare/eval/: __init__.py  compare.py
wavecare/synth/: __init__.py  dielectrics.py  export.py  noise.py  phantoms.py  scenes.py  solver.py  tumors.py
